# advent-of-code

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  format.sh  lint.sh  main.cpp  new_day.py  run.sh  test.sh
.github/workflows/: ci.yml
2015/01/: CMakeLists.txt  solution.cpp
2015/02/: CMakeLists.txt  solution.cpp
2025/01/: CMakeLists.txt  Safe.hpp  SafeTests.cpp  solution.cpp
2025/02/: CMakeLists.txt  solution.cpp
shared/: CMakeLists.txt  solution.hpp  strings.hpp
